// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 lcXcAj"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 VgDxs"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 eTWuGS"
          disabled={true}
          placeholder=" "
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 ePoPuR"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hYlQue"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 bAlyPc"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 lcXcAj"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 VgDxs"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 eTWuGS"
          placeholder=" "
          readOnly={true}
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 lcXcAj"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 VgDxs"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 eTWuGS"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 lcXcAj"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 VgDxs"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 eTWuGS"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 lcXcAj"
        placeholder="medium"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 VgDxs"
        placeholder="large"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 lifWkn"
          placeholder="xlarge"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 iaCGCs"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 fJmycv"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 enHEsf"
      >
        <input
          className="Input-qkdgvx-0 eTWuGS"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
